add postmark date to capture pre-dating gifts
git-svn-id: svn://svn.orangeleap.com/tangerine/mpower/trunk@2381 0f581344-5646-3a48-8ded-616bfea576c6